syntax = "proto3";

package rivet.backend.pkg.cluster.resolve_for_name_id;

import "proto/common.proto";
import "proto/backend/cluster.proto";

message Request {
	repeated string name_ids = 1;
}

message Response {
	message Cluster {
		rivet.common.Uuid cluster_id = 1;
		string name_id = 2;
	}

	repeated Cluster clusters = 1;
}
